# sample-self-rag

./: .env.example  .gitignore  README.md  debug_config.py  debug_postgres.py  fix_schema.py  inspect_adk.py  inspect_data.py  inspect_loop.py  inspect_postgres_schema.py  inspect_redis.py  main.py  pyproject.toml  run_callbacks_test.py  run_context_test.py  run_custom_sdk.py  schema.sql  test_db_schema.py  verify_session_select.py
rag/: api.py  database.py  document_processor.yaml  onboarding_api.py
src/: __init__.py  cli.py  orchestrator.py
src/adk_agents/complex_pipeline/: agent.py
src/adk_agents/example_a2a/: agent.py
src/adk_agents/example_custom_tools/: agent.py
src/callbacks/: parsing_callbacks.py  std_callbacks.py
src/config/: __init__.py  schema.py
src/core/: __init__.py  a2a_agent.py  agent_factory.py  context_llm_agent.py  context_wrapper.py  external_agent.py  lifecycle_agents.py  router_agent.py  tool_agent.py  workflow_builder.py
src/services/: redis_session.py
src/tools/: __init__.py  builtin.py  custom.py  registry.py
src/utils/: wrapper_generator.py
tests/: run_callback_test.py  test_callback_workflow.yaml
workflows/: abc.txt  complex_pipeline.yaml  example_a2a.yaml  example_chain_output.yaml  example_custom_tools.yaml  example_external.yaml  example_loop.yaml  example_nested.yaml  example_parallel.yaml  example_router.yaml  example_sequential.yaml  example_tool_chain.yaml  example_with_tool.yaml  simple_echo.yaml  sub_text_processor.yaml  test_callbacks.yaml  test_context.yaml  test_postgres_config.yaml  test_redis_config.yaml
(+12 files in other folders)
